add online* icons from fontello to SvgIconsHelper. update all usages of svg and font icons to use SvgIconsHelper. correct usages of SvgIconsHelper in the non-admin frontend to use size:0, no classes, and style with css

--- a/app/assets/stylesheets/base/icon-font.scss
+++ b/app/assets/stylesheets/base/icon-font.scss
@@ -1,3 +1,5 @@
+// TODO: delete as part of https://github.com/geeksforsocialchange/PlaceCal/issues/2517
+
 @font-face {
 	font-family: "placecal-icons";
 	src: url("fontello/font/placecal-icons.eot?12555807");
