--- a/app/assets/stylesheets/components/filters.scss
+++ b/app/assets/stylesheets/components/filters.scss
@@ -18,6 +18,12 @@
 			display: flex;
 			align-items: center;
 			gap: 0.25em;
+
+			svg {
+				width: 0.5rem;
+				height: 0.5rem;
+				color: $base_primary;
+			}
 		}
 	}
 
