--- a/app/assets/stylesheets/globals.scss
+++ b/app/assets/stylesheets/globals.scss
@@ -8,7 +8,9 @@
 // Overall styling
 @import "base/buttons";
 @import "base/grid";
+// TODO: delete as part of https://github.com/geeksforsocialchange/PlaceCal/issues/2517
 @import "base/icon-font";
+// TODO: delete as part of https://github.com/geeksforsocialchange/PlaceCal/issues/2517
 @import "base/icons";
 @import "base/image";
 @import "base/layout";
