--- a/app/assets/stylesheets/temp_tailwind_compat.scss
+++ b/app/assets/stylesheets/temp_tailwind_compat.scss
@@ -7,43 +7,43 @@
 
 // from app/helpers/svg_icons_helper.rb
 .size-3 {
-	width: calc(0.25rem * 3);
-	height: calc(0.25rem * 3);
+	width: 0.75rem;
+	height: 0.75rem;
 }
 
 .size-4 {
-	width: calc(0.25rem * 4);
-	height: calc(0.25rem * 4);
+	width: 1rem;
+	height: 1rem;
 }
 
 .size-5 {
-	width: calc(0.25rem * 5);
-	height: calc(0.25rem * 5);
+	width: 1.25rem;
+	height: 1.25rem;
 }
 
 .size-6 {
-	width: calc(0.25rem * 6);
-	height: calc(0.25rem * 6);
+	width: 1.5rem;
+	height: 1.5rem;
 }
 
 .size-8 {
-	width: calc(0.25rem * 8);
-	height: calc(0.25rem * 8);
+	width: 2rem;
+	height: 2rem;
 }
 
 .size-10 {
-	width: calc(0.25rem * 10);
-	height: calc(0.25rem * 10);
+	width: 2.5rem;
+	height: 2.5rem;
 }
 
 .size-12 {
-	width: calc(0.25rem * 12);
-	height: calc(0.25rem * 12);
+	width: 3rem;
+	height: 3rem;
 }
 
 .size-16 {
-	width: calc(0.25rem * 16);
-	height: calc(0.25rem * 16);
+	width: 4rem;
+	height: 4rem;
 }
 
 // from app/views/admin/pages/icons.html.erb
