--- a/app/components/filter_component.html.erb
+++ b/app/components/filter_component.html.erb
@@ -1,6 +1,6 @@
 <div class="filters__toggle">
   <button type="button" data-action="<%= toggle_action_value %>">
-    <%= icon(:triangle_down, size: '2', css_class: 'text-base-primary') %>
+    <%= icon(:triangle_down, size: '0') %>
     <span class="filters__link" data-<%= controller %>-target="<%= name %>Text">
       <%= button_text %>
     </span>
