--- a/app/assets/stylesheets/components/breadcrumb_component.scss
+++ b/app/assets/stylesheets/components/breadcrumb_component.scss
@@ -39,6 +39,12 @@
 			margin-bottom: 0.5rem;
 		}
 
+		svg {
+			width: 1rem;
+			height: 1rem;
+			color: $base-primary;
+		}
+
 		&--last {
 			display: flex;
 			flex-direction: row;
