--- a/app/assets/stylesheets/components/contact_details_component.scss
+++ b/app/assets/stylesheets/components/contact_details_component.scss
@@ -1,10 +1,10 @@
 .contact_details {
 	display: grid;
 	grid-template-columns: auto 1fr;
-	grid-gap: 0 0.5rem;
-
-	strong {
-		display: inline-block;
-		width: 1.2rem;
+	gap: 0 0.5rem;
+	align-items: center;
+	svg {
+		// lower text and numbers are very different heights. there isn't really a setting which keeps icon vertical spacing consistent and also looks aligned with the text. this is a compromise
+		margin-top: 4px;
 	}
 }
