--- a/app/assets/stylesheets/components/paginator_component.scss
+++ b/app/assets/stylesheets/components/paginator_component.scss
@@ -93,6 +93,12 @@
 				padding-left: 0.15rem;
 			}
 		}
+
+		svg {
+			width: 1rem;
+			height: 1rem;
+			color: $base_background;
+		}
 	}
 
 	// Title
