--- a/app/components/contact_details.html.erb
+++ b/app/components/contact_details.html.erb
@@ -1,33 +1,31 @@
-<p class="contact_details">  
+<p class="contact_details">
   <% if @phone.present? %>
-    <strong class="icon icon--contact icon--phone">Phone:</strong>
-    <span>
+    <%= icon(:misc_phone, size: '4') %>
       <%- if @is_valid_phone %>
         <%= link_to @phone, "tel:#{@phone}", target: '_blank' %>
       <% else %>
         <%= @phone %>
       <% end %>
-    </span>
   <% end %>
   <% if @email.present? %>
-    <strong class="icon icon--contact icon--email">Email:</strong>
-    <span><%= mail_to @email, @email, target: '_blank' %></span>
+    <%= icon(:misc_email, size: '4') %>
+    <%= mail_to @email, @email, target: '_blank' %>
   <% end %>
   <% if @url.present? %>
-    <strong class="icon icon--contact icon--website"> Website:</strong>
-    <span><%= link_to strip_url(@url), @url, target: '_blank' %></span>
+    <%= icon(:misc_website, size: '4') %>
+    <%= link_to strip_url(@url), @url, target: '_blank' %>
   <% end %>
   <% if @facebook_link.present? %>
-    <strong class="icon icon--contact icon--facebook">Facebook:</strong>
-    <span><%= link_to @facebook_link, @facebook_url, target: '_blank' %></span>
+    <%= icon(:misc_facebook, size: '4') %>
+    <%= link_to @facebook_link, @facebook_url, target: '_blank' %>
   <% end %>
   <% if @twitter_handle.present? %>
-    <strong class="icon icon--contact icon--twitter">Twitter:</strong>
-    <span><%= link_to "@#{@twitter_handle}", @twitter_url, target: '_blank' %></span>
+    <%= icon(:misc_twitter, size: '4') %>
+    <%= link_to "@#{@twitter_handle}", @twitter_url, target: '_blank' %>
   <% end %>
   <% if @instagram_handle.present? %>
-    <strong class="icon icon--contact icon--instagram">Instagram:</strong>
-    <span><%= link_to "@#{@instagram_handle}", "https://www.instagram.com/#{@instagram_handle}/", target: '_blank' %></span>
+    <%= icon(:misc_instagram, size: '4') %>
+    <%= link_to "@#{@instagram_handle}", "https://www.instagram.com/#{@instagram_handle}/", target: '_blank' %>
   <% end %>
   <% unless :contact? %>
     No contact information - let us know!
