use sass vars in temp_tailwind_compat. replace more svg image usages with `icon()`. redo pull_quote scss. tag more files to delete with TODOs. fix case_study bottom margin. rename some misc_ icons to contact_

--- a/app/assets/stylesheets/components/case_study_component.scss
+++ b/app/assets/stylesheets/components/case_study_component.scss
@@ -63,13 +63,13 @@
 	@include for-tablet-landscape-up {
 		bottom: 0;
 		left: 0;
-		padding: 1rem 2rem 2rem;
+		padding: 1rem 2rem;
 		position: absolute;
 		right: 0;
 	}
 
 	@include for-desktop-up {
-		padding: 1rem 1rem 2rem;
+		padding: 1rem 1rem;
 	}
 }
 
