--- a/app/assets/stylesheets/home/_reveal.scss
+++ b/app/assets/stylesheets/home/_reveal.scss
@@ -1,3 +1,5 @@
+// TODO: migrate this to a component which wraps a <details/> element
+
 @import "../variables_mixins";
 
 $image-width-portrait: 250px;
