--- a/app/components/home_footer_component.html.erb
+++ b/app/components/home_footer_component.html.erb
@@ -24,7 +24,7 @@
           <% end %>
         </li>
         <li aria-hidden="true" >
-          <%= image_tag "home/icons/plus.svg" , alt: "" %>
+          <%= icon(:home_plus, size:'0') %>
         </li>
         <li>
           <%= image_tag "home/logos/phase.svg" , alt: "PHASE: place, health, architecture, space, enviroment" %>
@@ -32,7 +32,7 @@
       </ul>
 
       <h5 class="footer_home__body__title">Sponsored by</h5>
-       
+
       <ul class="footer_home__body__logos">
         <li>
           <%= image_tag "home/logos/cityverve.svg" , alt: "Cityverve" %>
