--- a/app/views/admin/pages/icons.html.erb
+++ b/app/views/admin/pages/icons.html.erb
@@ -24,7 +24,8 @@
     'Form' => %i[form_checkbox form_checkbox_check form_cross form_radio form_radio_check form_tick],
     'Triangle' => %i[triangle_up triangle_down triangle_left triangle_right],
     'Event' => %i[event_date event_duration event_place event_repeats event_time],
-    'Misc' => %i[misc_email misc_facebook misc_instagram misc_instagram_circle misc_menu misc_phone misc_place misc_question_mark misc_repeats misc_roundel misc_time misc_twitter misc_website]
+    'Contact' => %i[contact_email contact_facebook contact_instagram contact_instagram_circle contact_phone contact_twitter contact_website],
+    'Misc' => %i[misc_menu misc_place misc_question_mark misc_repeats misc_roundel misc_time]
   }
 %>
 
