--- a/app/assets/stylesheets/home/_award.scss
+++ b/app/assets/stylesheets/home/_award.scss
@@ -1,3 +1,5 @@
+// TODO: delete as part of https://github.com/geeksforsocialchange/PlaceCal/issues/2517
+// i don't think this is used anywhere
 .award {
 	background-image: image-url("home/icons/award.svg");
 	background-repeat: no-repeat;
