--- a/app/assets/stylesheets/temp_tailwind_compat.scss
+++ b/app/assets/stylesheets/temp_tailwind_compat.scss
@@ -101,19 +101,20 @@
 }
 
 // temp names for colours from app/assets/stylesheets/variables/colours.scss used in svgs
-// need name decisions from Kim
+// TODO: these could use site-specific theme colour vars and fallback to defaults
+
 .text-base-background {
-	color: #fffcf0;
+	color: $base-background;
 }
 
 .text-home-background {
-	color: #fffbef;
+	color: $home-background;
 }
 
 .text-base-primary {
-	color: #afcf5a;
+	color: $base-primary;
 }
 
 .text-base-secondary {
-	color: #f19089;
+	color: $base-secondary;
 }
