--- a/app/components/contact_details.html.erb
+++ b/app/components/contact_details.html.erb
@@ -1,6 +1,6 @@
 <p class="contact_details">
   <% if @phone.present? %>
-    <%= icon(:misc_phone, size: '4') %>
+    <%= icon(:contact_phone, size: '4') %>
       <%- if @is_valid_phone %>
         <%= link_to @phone, "tel:#{@phone}", target: '_blank' %>
       <% else %>
@@ -8,23 +8,23 @@
       <% end %>
   <% end %>
   <% if @email.present? %>
-    <%= icon(:misc_email, size: '4') %>
+    <%= icon(:contact_email, size: '4') %>
     <%= mail_to @email, @email, target: '_blank' %>
   <% end %>
   <% if @url.present? %>
-    <%= icon(:misc_website, size: '4') %>
+    <%= icon(:contact_website, size: '4') %>
     <%= link_to strip_url(@url), @url, target: '_blank' %>
   <% end %>
   <% if @facebook_link.present? %>
-    <%= icon(:misc_facebook, size: '4') %>
+    <%= icon(:contact_facebook, size: '4') %>
     <%= link_to @facebook_link, @facebook_url, target: '_blank' %>
   <% end %>
   <% if @twitter_handle.present? %>
-    <%= icon(:misc_twitter, size: '4') %>
+    <%= icon(:contact_twitter, size: '4') %>
     <%= link_to "@#{@twitter_handle}", @twitter_url, target: '_blank' %>
   <% end %>
   <% if @instagram_handle.present? %>
-    <%= icon(:misc_instagram, size: '4') %>
+    <%= icon(:contact_instagram, size: '4') %>
     <%= link_to "@#{@instagram_handle}", "https://www.instagram.com/#{@instagram_handle}/", target: '_blank' %>
   <% end %>
   <% unless :contact? %>
