--- a/app/components/navigation_component.html.erb
+++ b/app/components/navigation_component.html.erb
@@ -28,10 +28,6 @@
     </ul>
   </nav>
   <a href="#" class="header__toggle" data-action="click->mobile-menu#toggle" data-turbo="false">
-    <svg viewBox="0 0 33 31" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-      <polygon class="svg__primary" points="0 5 33 5 33 0 0 0"></polygon>
-      <polygon class="svg__primary" points="0 18 33 18 33 13 0 13"></polygon>
-      <polygon class="svg__primary" points="0 31 33 31 33 26 0 26"></polygon>
-    </svg>
+    <%= icon(:misc_menu, size:'0') %>
   </a>
 </div>
