DetailsComponent so i can factor out use of icons used in `reveal*` classes (need to extend to handle AudienceIntroComponent)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,6 +37,7 @@
 @import "components/case_study_component";
 @import "components/contact_details_component";
 @import "components/container_with_header_component";
+@import "components/details_component";
 @import "components/featured_partnerships_component";
 @import "components/filters";
 @import "components/footer";
