--- a/app/views/pages/our_story.html.erb
+++ b/app/views/pages/our_story.html.erb
@@ -7,61 +7,38 @@
     <p class="alt-title-small">We wanted to examine the causes of social isolation and loneliness within neighbourhoods in order to figure out how to combat them. </p>
   </div>
 
-  <div class="card card--plain pattern pattern--research reveal reveal--ourstory" data-controller="reveal">
-    <div class="our_story__intro">
-      <div class="reveal__teaser">
-        <p>We spoke to over 6,000 people in Manchester and divested over £200,000 in funds directly to community groups.</p>
-        <p>A key finding was that people who were isolated commonly thought <em>“There’s nothing to do in my neighbourhood!”</em>. In communities up and down the country, this has led to social isolation and loneliness for a number of citizens, and therefore a lack of community resilience.</p>
-      </div>
-      <div class="reveal__body">
-        <p>This is a big issue in the UK in particular, where it is estimated that 2 million older people will be lonely and isolated by 2024. Studies show that social isolation and loneliness is as bad for your health as smoking two packets of cigarettes a week.</p>
-        <p>Despite massive investments of time and money by big institutions such as city councils and health providers into event listings, asset maps and community directories, still no one could find out what was happening in their area.</p>
-        <p>We continued to work with age friendly partnerships in Hulme and Moss Side (our pilot area, where we are based) to find out why.</p>
-      </div>
-    </div>
-    <button class="reveal__button" data-reveal-target="button" data-action="click->reveal#toggle">Open to read more</button>
+  <div class="card card--plain pattern pattern--research">
+    <%= render(DetailsComponent.new(header: nil, summary: '<p>We spoke to over 6,000 people in Manchester and divested over £200,000 in funds directly to community groups.</p>
+      <p>A key finding was that people who were isolated commonly thought <em>“There’s nothing to do in my neighbourhood!”</em>. In communities up and down the country, this has led to social isolation and loneliness for a number of citizens, and therefore a lack of community resilience.</p>'.html_safe)) do %>
+      <p>This is a big issue in the UK in particular, where it is estimated that 2 million older people will be lonely and isolated by 2024. Studies show that social isolation and loneliness is as bad for your health as smoking two packets of cigarettes a week.</p>
+      <p>Despite massive investments of time and money by big institutions such as city councils and health providers into event listings, asset maps and community directories, still no one could find out what was happening in their area.</p>
+      <p>We continued to work with age friendly partnerships in Hulme and Moss Side (our pilot area, where we are based) to find out why.</p>
+    <% end %>
   </div>
+
 
   <!-- PROBLEMS -->
 
   <h2 class="fc-primary center">We found three big problems</h2>
 
-  <div class="card card--plain reveal reveal--ourstory reveal--clip-right" data-controller="reveal">
-    <div class="reveal__teaser">
-      <h3>People were not working together</h3>
-      <%= image_tag "home/our_story/not_together.png" %>
-      <p>Every large institution was working on their own community information websites, with different organisations gathering the same data.</p>
-    </div>
-    <div class="reveal__body">
+  <div class="card card--plain">
+    <%= render(DetailsComponent.new(header: 'People were not working together', summary: 'Every large institution was working on their own community information websites, with different organisations gathering the same data.', image_url: 'home/our_story/not_together.png')) do %>
       <p>This top-down approach of people in large institutions trying to gather information on small community groups was inefficient and missed out large swathes of activities and groups.</p>
       <p>It also resulted in duplication, or several low quality results rather than one really good one.</p>
-    </div>
-    <button class="reveal__button" data-reveal-target="button" data-action="click->reveal#toggle">Open to read more</button>
+    <% end %>
   </div>
 
-  <div class="card card--plain reveal reveal--ourstory reveal--clip-left" data-controller="reveal">
-    <div class="reveal__teaser">
-      <h3>Current software wasn’t working</h3>
-      <%= image_tag "home/our_story/current_software.png" %>
-      <p>Existing community information websites were either maintained on behalf of the groups by institutional staff or required community groups to regularly log in to keep their events updated.</p>
-    </div>
-    <div class="reveal__body">
+  <div class="card card--plain">
+    <%= render(DetailsComponent.new(header: 'Current software wasn’t working', summary: 'Existing community information websites were either maintained on behalf of the groups by institutional staff or required community groups to regularly log in to keep their events updated.', image_url: 'home/our_story/current_software.png', image_left: true)) do %>
       <p>This meant that community groups had to input their information in one site for each provider, in addition to social media sites like Facebook, Twitter and Instagram, creating an ever-increasing amount of work for a very small amount of publicity.</p>
-    </div>
-    <button class="reveal__button" data-reveal-target="button" data-action="click->reveal#toggle">Open to read more</button>
+    <% end %>
   </div>
 
-  <div class="card card--plain reveal reveal--ourstory reveal--clip-right" data-controller="reveal">
-    <div class="reveal__teaser">
-      <h3>Tech skills are very low</h3>
-      <%= image_tag "home/our_story/no_tech_skills.png" %>
-      <p>Digital exclusion has affected community groups disproportionately, particularly in deprived areas such as Manchester. Groups often don’t have the skills or tools needed to promote themselves effectively.
-    </div>
-    <div class="reveal__body">
+  <div class="card card--plain">
+    <%= render(DetailsComponent.new(header: 'Tech skills are very low', summary: 'Digital exclusion has affected community groups disproportionately, particularly in deprived areas such as Manchester. Groups often don’t have the skills or tools needed to promote themselves effectively.', image_url: 'home/our_story/no_tech_skills.png')) do %>
       <p>Staff at many institutions have felt equally left behind by recent innovations.</p>
       <p>Most groups in our neighbourhood had never published anything online about their group at all, relying completely on word of mouth and thereby missing out on many opportunities to connect with new and enthusiastic participants.</p>
-    </div>
-    <button class="reveal__button" data-reveal-target="button" data-action="click->reveal#toggle">Open to read more</button>
+    <% end %>
   </div>
 
   <!-- SOLUTIONS -->
@@ -75,41 +52,22 @@
     <br>
   </div>
 
-  <div class="card card--plain reveal reveal--ourstory reveal--right" data-controller="reveal">
-    <div class="reveal__teaser">
-      <h3>Collective, not-for-profit ownership</h3>
-      <%= image_tag "home/our_story/collective_ownership.png" %>
-      <p>To be sustainable, everything must be owned and managed directly by institutions and community groups working together.</p>
-    </div>
-    <div class="reveal__body">
+  <div class="card card--plain">
+    <%= render(DetailsComponent.new(header: 'Collective, not-for-profit ownership', summary: 'To be sustainable, everything must be owned and managed directly by institutions and community groups working together.', image_url: 'home/our_story/collective_ownership.png')) do %>
       <p>This supports the existing efforts being done in neighbourhoods by partnerships of councils, community organisers, and public health services.</p>
-    </div>
-    <button class="reveal__button" data-reveal-target="button" data-action="click->reveal#toggle">Open to read more</button>
+    <% end %>
   </div>
 
-  <div class="card card--plain reveal reveal--ourstory reveal--left" data-controller="reveal">
-    <div class="reveal__teaser">
-      <h3>Software built on existing tools</h3>
-      <%= image_tag "home/our_story/use_existing_tools.png" %>
-      <p>Our software builds on top of tools that community groups are already using, such as Google Calendar, Outlook 365, and Facebook.</p>
-    </div>
-    <div class="reveal__body">
+  <div class="card card--plain">
+    <%= render(DetailsComponent.new(header: 'Software built on existing tools', summary: 'Our software builds on top of tools that community groups are already using, such as Google Calendar, Outlook 365, and Facebook.', image_url: 'home/our_story/use_existing_tools.png', image_left: true)) do %>
       <p>These listings are then converted into super simple, highly accessible and constantly updated listings for each neighbourhood, community group and venue.</p>
-    </div>
-    <button class="reveal__button" data-reveal-target="button" data-action="click->reveal#toggle">Open to read more</button>
+    <% end %>
   </div>
 
-  <div class="card card--plain reveal reveal--ourstory reveal--right" data-controller="reveal">
-    <div class="reveal__teaser">
-      <h3>A training program that includes everyone</h3>
-      <%= image_tag "home/our_story/training.png" %>
+  <div class="card card--plain">
+    <%= render(DetailsComponent.new(header: 'A training program that includes everyone', summary: 'Our educational program for institutions and community groups alike walks everyone through the process of publishing and updating their information.', image_url: 'home/our_story/training.png')) do %>
       <p>Our educational program for institutions and community groups alike walks everyone through the process of publishing and updating their information.</p>
-    </div>
-    <div class="reveal__body">
-      <p>It operates on a ‘train-the-trainers’ basis, so key people in the community can pass on their knowledge to other groups and organisations.</p>
-      <p>This means no one is left behind, helping to close the ‘digital divide’.</p>
-    </div>
-    <button class="reveal__button" data-reveal-target="button" data-action="click->reveal#toggle">Open to read more</button>
+    <% end %>
   </div>
 
   <!-- JOIN -->
